Add inlineModeAddLocation